[gd_scene load_steps=13 format=2]

[ext_resource path="res://src/actors/enemy_level_1/actor_enemy_level_1_script.gd" type="Script" id=1]
[ext_resource path="res://src/assets/enemies/level_1/morcego.png" type="Texture" id=2]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 320, 320 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 320, 0, 320, 320 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 640, 0, 320, 320 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 960, 0, 320, 320 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=6]
radius = 56.8612

[sub_resource type="OccluderPolygon2D" id=7]
polygon = PoolVector2Array( -30.3228, -28.9215, -29.1336, 27.5658, 28.5429, 25.1874, 28.5429, -28.3269 )

[sub_resource type="CircleShape2D" id=8]
radius = 58.126

[sub_resource type="Animation" id=9]
resource_name = "not_spawned"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:is_spawned")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("DamageArea/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=10]
resource_name = "spawned"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:is_spawned")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("DamageArea/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[node name="EnemyLevel1" type="KinematicBody2D"]
pause_mode = 2
visible = false
collision_layer = 64
collision_mask = 64
script = ExtResource( 1 )
speed = 120

[node name="Sprite" type="Sprite" parent="."]
visible = false
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 200, 200 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 5 )
speed_scale = 2.5
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 6 )
disabled = true

[node name="RayCast2D" type="RayCast2D" parent="."]
enabled = true
collision_mask = 20584
collide_with_areas = true
collide_with_bodies = false

[node name="RayCastFacingDirection" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 256, 0 )
collision_mask = 72

[node name="Timers" type="Node2D" parent="."]

[node name="IdleTimer" type="Timer" parent="Timers"]
one_shot = true

[node name="StandstillTimer" type="Timer" parent="Timers"]
wait_time = 5.0
one_shot = true

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
show_behind_parent = true
occluder = SubResource( 7 )

[node name="DamageArea" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 128

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageArea"]
shape = SubResource( 8 )
disabled = true

[node name="SpawnBehavior" type="AnimationPlayer" parent="."]
anims/not_spawned = SubResource( 9 )
anims/spawned = SubResource( 10 )
[connection signal="timeout" from="Timers/IdleTimer" to="." method="_on_IdleTimer_timeout"]
[connection signal="timeout" from="Timers/StandstillTimer" to="." method="_on_StandstillTimer_timeout"]
[connection signal="area_entered" from="DamageArea" to="." method="_on_DamageArea_area_entered"]
[connection signal="area_exited" from="DamageArea" to="." method="_on_DamageArea_area_exited"]
